# PineconeEngine2

./: CMakeLists.txt  README.md  TODO.md
examples/example1/: CMakeLists.txt  example1.cpp
kelp_externals/: CMakeLists.txt
kelp_externals/og_pceLogger/: CMakeLists.txt  pceLogger.cpp  pceLogger.hpp
kelp_externals/og_pceLogger/test/: CMakeLists.txt  test_pceLogger.cpp
src/: CMakeLists.txt  notes.md
src/pce3dRenderSystems/: CMakeLists.txt
src/pce3dRenderSystems/CameraOperatorSystem/: CMakeLists.txt  CameraOperatorSystem.cpp  CameraOperatorSystem.hpp  CameraOperatorSystem.pc.in
src/pce3dRenderSystems/CameraTransformSystem/: CMakeLists.txt  CameraTransformSystem.cpp  CameraTransformSystem.hpp  CameraTransformSystem.pc.in
src/pce3dRenderSystems/OrderForRenderSystem/: CMakeLists.txt  OrderForRenderSystem.cpp  OrderForRenderSystem.hpp  OrderForRenderSystem.pc.in
src/pce3dRenderSystems/OrderForRenderSystem/util/: OrderRenderListNode.cpp  OrderRenderListNode.hpp  orderForRenderFunctions.cpp  orderForRenderFunctions.hpp  orderTag.cpp  orderTag.hpp
src/pce3dRenderSystems/RadarSystem/: CMakeLists.txt  RadarSystem.cpp  RadarSystem.hpp  RadarSystem.pc.in
src/pce3dRenderSystems/RadarSystem/util/: radarFunctions.cpp  radarFunctions.hpp
src/pce3dRenderSystems/RenderSystem/: CMakeLists.txt  RenderSystem.hpp  RenderSystem.pc.in
src/pce3dRenderSystems/RenderSystem/entity_forging/: entity_forging.hpp
src/pce3dRenderSystems/RenderSystem/util/: OrderRenderListNode.cpp  OrderRenderListNode.hpp  orderForRenderFunctions.cpp  orderForRenderFunctions.hpp  orderTag.cpp  orderTag.hpp
src/pce3dRenderSystems/RenderingOrderRegistrationSystem/: CMakeLists.txt  RenderingOrderRegistrationSystem.cpp  RenderingOrderRegistrationSystem.hpp  RenderingOrderRegistrationSystem.pc.in
src/pce3dRenderSystems/ShadeSystem/: CMakeLists.txt  ShadeSystem.cpp  ShadeSystem.hpp  ShadeSystem.pc.in
src/pce3dRenderSystems/ShadeSystem/util/: radarFunctions.cpp
src/pceCamera/: CMakeLists.txt  pceCamera.pc.in
src/pceCamera/src/: camera.hpp  cameraOperatorFunctions.cpp  cameraOperatorFunctions.hpp
src/pceComponents/: CMakeLists.txt  pceComponents.pce.in
src/pceComponents/src/: face_shade_component.hpp  force_component.hpp  local_rotation_component.hpp  mass_distribution_component.hpp  motion_component.hpp  order_of_render_registration_component.hpp  position_component.hpp  radar_component.hpp  render_component.hpp  rigid_object_component.hpp  surface_component.hpp
src/pceECS/: CMakeLists.txt  pceECS.pc.in
src/pceECS/example/: CMakeLists.txt  example.cpp
src/pceECS/src/: ComponentArray.hpp  ComponentMgr.cpp  ComponentMgr.hpp  ControlPanel.cpp  ControlPanel.hpp  EntityMgr.cpp  EntityMgr.hpp  System.hpp  SystemMgr.cpp  SystemMgr.hpp  pceECS.hpp
src/pceEntityForging/: CMakeLists.txt  pceEntityForging.pc.in
src/pceEntityForging/src/: base_entity_forging.cpp  base_entity_forging.hpp  cuboid_forging.cpp  cuboid_forging.hpp  forge_functions.cpp  forge_functions.hpp  rectangular_prism_forging.cpp  rectangular_prism_forging.hpp  sphere_forging.cpp  sphere_forging.hpp
src/pceMaths/: CMakeLists.txt  pceMaths.pc.in
src/pceMaths/examples/example1/: CMakeLists.txt  example1.cpp
src/pceMaths/examples/example2/: CMakeLists.txt  example2_vec3_times_quat.cpp
src/pceMaths/examples/example3/: CMakeLists.txt  example3_quat_times_quat.cpp
src/pceMaths/src/: PlaneCartesianForm.hpp  Quadrilateral.hpp  Triangle.hpp  complex_functions.hpp  pceVec3.hpp  pce_psuedo_randomness.hpp  plane_functions.hpp  quaternion_functions.hpp  rounding_functions.hpp  sign.hpp  sphere_functions.hpp  triangle_functions.hpp  vector_functions.hpp  vertex_functions.hpp
src/pceMaths/src/implementations/: complex_functions.cpp  pce_psuedo_randomness.cpp  plane_functions.cpp  quaternion_functions.cpp  rounding_functions.cpp  sphere_functions.cpp  triangle_functions.cpp  vector_functions.cpp  vertex_functions.cpp
src/pceRenderPipeline/: CMakeLists.txt  pceRenderPipeline.pc.in
src/pceRenderPipeline/examples/: CMakeLists.txt
src/pceRenderPipeline/examples/example1_basic_spheres/: CMakeLists.txt  example1_basic_spheres.cpp
src/pceRenderPipeline/examples/example2_more_spheres/: CMakeLists.txt  example2_more_spheres.cpp
src/pceRenderPipeline/examples/example3_cuboids/: CMakeLists.txt  example3_cuboids.cpp
src/pceRenderPipeline/src/: RenderPipeline.cpp  RenderPipeline.hpp
src/pceRenderUtils/: CMakeLists.txt  pceRenderUtils.pc.in
src/pceRenderUtils/examples/: CMakeLists.txt
src/pceRenderUtils/examples/example1_render_circle/: CMakeLists.txt  example1_render_circle.cpp
src/pceRenderUtils/src/: SDL_cartesian_conversion.cpp  SDL_cartesian_conversion.hpp  raster_functions.cpp  raster_functions.hpp  render_fns_SDL.cpp  render_fns_SDL.hpp
src/pceRenderUtils/src/maybe_add_later/: drawSDL.cpp  drawSDL.hpp
src/pceRenderUtils/src/other/: glm_hash.hpp  polyhedron_render_functions.cpp  polyhedron_render_functions.hpp  quickdraw.cpp  render_functions.cpp  render_functions.hpp  triangle_raster_functions.cpp  triangle_raster_functions.hpp
src/pceRenderUtils/test/: CMakeLists.txt
src/pceRenderUtils/test/test_raster_fns/: CMakeLists.txt  test_raster_fns.cpp
src/pceSDL/: CMakeLists.txt  pceSDL.pc.in
src/pceSDL/examples/example1/: CMakeLists.txt  example1.cpp
src/pceSDL/src/: CoreManager.cpp  CoreManager.hpp  Simulation.cpp  Simulation.hpp  framerate_timer.cpp  framerate_timer.hpp  pceSDL.hpp
src/pceUtils/: CMakeLists.txt  pceUtils.pc.in
src/pceUtils/src/: glm_hash.hpp  virtual_keyboard.hpp
src/pceUtils/src/attempt/: glm_hash.cpp  glm_hash.hpp
src/pceUtils/src/bckup/: glm_hash.cpp  glm_hash.hpp
