add_subdirectory(pceSDL)
add_subdirectory(pceECS)
add_subdirectory(pceUtils)
add_subdirectory(pceComponents)
add_subdirectory(pceMaths)
add_subdirectory(pceRenderUtils)
add_subdirectory(pceCamera)
add_subdirectory(pceEntityForging)
add_subdirectory(pceRenderPipeline)
add_subdirectory(pce3dRenderSystems)
# NOT READY YET:
#add_subdirectory(pcePhysicsSystems)
